--- a/app/src/main/res/layout/content_take_attendance_menu.xml
+++ b/app/src/main/res/layout/content_take_attendance_menu.xml
@@ -91,7 +91,7 @@
         tools:textSize="18sp" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/time_spinner"
         android:layout_width="309dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -117,5 +117,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/time_spinner" />
 </android.support.constraint.ConstraintLayout>
